Adds additional date fields, renames pushed_to_specify to Date_asset_finalised